tests/miniJava/neg/005854_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { new System.out.println ( { } ) ; } }
